--- a/central-auth-service/authcommon/pom.xml
+++ b/central-auth-service/authcommon/pom.xml
@@ -2,29 +2,37 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.publicissapient.kpidashboard</groupId>
   <artifactId>authcommon</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0</version>
   <packaging>jar</packaging>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.3</version>
+    <version>3.2.0</version>
     <relativePath />
   </parent>
 
   <properties>
-  <java.version>1.8</java.version>
+    <java.version>17</java.version>
+    <lombok.version>1.18.24</lombok.version>
   </properties>
   <dependencies>
     <dependency>
       <groupId>org.projectlombok</groupId>
       <artifactId>lombok</artifactId>
+      <version>${lombok.version}</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-validator</artifactId>
       <version>5.2.5.Final</version>
+    </dependency>
+    <dependency>
+      <groupId>javax.servlet</groupId>
+      <artifactId>servlet-api</artifactId>
+      <version>3.0-alpha-1</version>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
@@ -47,6 +55,7 @@
     <dependency>
       <groupId>javax.xml.bind</groupId>
       <artifactId>jaxb-api</artifactId>
+      <version>2.3.1</version>
     </dependency>
   </dependencies>
 </project>
