DTS-36327-Added the "Strict-Transport-Security" header properties

--- a/central-auth-service/authapi/src/main/resources/application.properties
+++ b/central-auth-service/authapi/src/main/resources/application.properties
@@ -170,3 +170,7 @@ auth.corsFilterValidOrigin=localhost,127.0.0.1,ui
 #used in/for : expose push data api
 auth.exposeAPITokenExpiryDays=90
 exposeAPITokenExpiryDays=90
+
+#Used for HTTP Strict Transport Security - which we are setting in response header.
+max-age-seconds=315360000
+include-subdomains=true
