changing configmap file for both

--- a/Kubernetes/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/configmap.yaml
@@ -21,6 +21,11 @@ data:
   isRepoToolEnable: "true"
   versionnumber: "9.0.0"
   analytics.switch: "true"
+  priority.P1: "p1,P1 - Blocker, blocker, 1, 0, p0, Urgent"
+  priority.P2: "p2, critical, P2 - Critical, 2"
+  priority.P3: "p3, P3 - Major, major, 3, High"
+  priority.P4: "p4, P4 - Minor, minor, 4, Medium"
+  priority.P5: "P5 - Trivial, 5, trivial, Unprioritized, Low"
 
   # UI Config
   API_HOST: "customapi"
