--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -1,20 +1,37 @@
 auth:
   accountLockedThreshold: 3
-  assertingEntityId: https://sts.windows.net/d52c9ea1-7c21-47b1-82a3-33a74b1f74b8/
-  authCookieDuration: 3600
-  authCookieHttpOnly: true
-  authCookieSameSite: SameSite=None
-  authCookieSecured: true
+
+  cookie:
+    duration: 3600
+    domain: tools.publicis.sapient.com
+    isSameSite: true
+    isSecure: true
+
+  forgot-password:
+    #Purpose of properties : property used to expire forgot password
+    #possible values : number [1-20]
+    #used in/for : forgot password functionality - In Minute
+    expiryInterval: 30
+    #Set this property only for local setup(eg. 8787). Empty for server.
+    serverPort: ''
+    #uiHost will be "localhost" for local setup and empty for server
+    uiHost: ''
+    #Set this property only for local setup (eg. 3000). Empty for server.
+    uiPort: ''
+
   authenticationProviders: SAML,STANDARD
+
   #Purpose of properties : central auth frontend url/domain Name
   #possible values : https://dev-authnauth.tools.publicis.sapient.com , https://qa-authnauth.tools.publicis.sapient.com
   # https://uat-authnauth.tools.publicis.sapient.com  , http://localhost:3000
   #used in/for : back to frontend redirect
   baseUiUrl: https://dev-authnauth.tools.publicis.sapient.com
+
   #Purpose of properties : central auth backend url
   #possible values : http://authnauth:8787 , http://localhost:8787
   #used in/for : saml login , redirect and validate request
   baseUrl: http://authnauth:8787
+
   #Purpose of properties : property used to provide valid origin
   #possible values : String [a-z, A-Z, 0-9]
   #used in/for : CORS
@@ -26,21 +43,10 @@ auth:
     - qa-authnauth.tools.publicis.sapient.com
     - uat-authnauth.tools.publicis.sapient.com
     - local-tengine.tremend.ro
-  defaultRedirectToAfterLogin: ${auth.baseUiUrl}/login/status
-  defaultRedirectToAfterLogout: ${auth.baseUrl}${server.servlet.context-path}/hello
-  domain: tools.publicis.sapient.com
-  expirationTime: 172800000
-  #Purpose of properties : expose push data api token expiry days limit
-  #possible values : number [1-365]
-  #used in/for : expose push data api
-  exposeAPITokenExpiryDays: 90
-  holdingEntityId: spn:bf226903-9d44-4e77-af84-e3ad008442ef
-  loginCallback: ${auth.baseUrl}${server.servlet.context-path}/saml/sp/discovery?idp=${auth.assertingEntityId}
-  loginSuccessPageFormat: ${auth.baseUiUrl}/status?authToken=%s
-  logoutCallback: ${auth.baseUrl}${server.servlet.context-path}/saml/sp/logout?${auth.logoutEmailQueryParam}=%s
+
   loginView: login_view
   logoutView: logout_view
-  logoutEmailQueryParam: email
+
   mailTemplate:
     Access_Request: Access_Request_Template
     Approve_User_Reject: Approve_User_Reject_Template
@@ -49,9 +55,8 @@ auth:
     Pre_Approval: Pre_Approval_Template
     User_Verification: User_Verification_Template
     User_Verification_Failed: User_Verification_Failed_Template
-  mailemplate:
     Submit_Feedback: Feedback_Submit_Template
-  nameId: urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
+
   notificationSubject:
     accessRequest: New access request for KnowHOW
     approvalRequest: Approval Request for KnowHow
@@ -60,30 +65,22 @@ auth:
     preApproval: 'KnowHOW: New user request'
     userVerification: User Verification Request
     userVerificationFailed: User Verification Token Expired
-  samlMaxAuthenticationAgeMillis: 604800000
+
   secret: 3106dd9eee424487884363ce026ea979
-  subDomainCookie: true
-  ssoLogin: false
+
   auth-endpoints:
     authenticated-endpoints:
       - '**'
     public-endpoints:
       - '/sso-login'
       - '/sso-logout-view'
+      - '/login'
+      - '/login/status/standard'
 
 flag:
   mailWithoutKafka: false
-forgotPassword:
-  #Purpose of properties : property used to expire forgot password
-  #possible values : number [1-20]
-  #used in/for : forgot password functionality - In Minute
-  expiryInterval: 30
-  #Set this property only for local setup(eg. 8787). Empty for server.
-  serverPort: ''
-  #uiHost will be "localhost" for local setup and empty for server
-  uiHost: ''
-  #Set this property only for local setup (eg. 3000). Empty for server.
-  uiPort: ''
+
+
 
 kafka:
   mailtopic: mail-topic
