--- a/Kubernetes/Kubernetes-manifest/configmap.yaml
+++ b/Kubernetes/Kubernetes-manifest/configmap.yaml
@@ -26,6 +26,7 @@ data:
   priority.P3: "p3, P3 - Major, major, 3, High"
   priority.P4: "p4, P4 - Minor, minor, 4, Medium"
   priority.P5: "P5 - Trivial, 5, trivial, Unprioritized, Low"
+  repoToolURL: "http://debbie-django:8000/api"
 
   # UI Config
   API_HOST: "customapi"
