--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -29,6 +29,11 @@ auth:
 
   authenticationProviders: SAML,STANDARD
 
+  #Purpose of properties : property used for user token expiration before verification
+  #possible values : number [1-20]
+  #used in/for : user verification functionality - In days
+  verifyUserTokenExpiryDays: 20
+
   #Purpose of properties : central auth frontend url/domain Name
   #possible values : https://dev-authnauth.tools.publicis.sapient.com , https://qa-authnauth.tools.publicis.sapient.com
   # https://uat-authnauth.tools.publicis.sapient.com  , http://localhost:3000
@@ -85,24 +90,21 @@ auth:
       - '/login'
       - '/login/status/standard'
 
-flag:
   mailWithoutKafka: false
-
-
 
 kafka:
   mailtopic: mail-topic
 
 logging:
   level:
-    root: info
+    root: INFO
   logType: both
 
 notification:
   #Purpose of properties : property used to provide smtp service sent mail
   #possible values : development, production
   #used in/for : sent mail
-  env: development
+  env: production
   #Purpose of properties : property used to provide if any instance want to disable mail
   #possible values : true for mail sent , false for disable
   #used in/for : sent mail
@@ -128,35 +130,23 @@ spring:
     producer:
       bootstrap-servers: kafka:9092
   main:
-    allow-circular-references: true
+    allow-circular-references: false
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
   security:
+    filter:
+      dispatcher-types: async, error, request, forward
     saml2:
-      serviceProvider:
-        alias: ps-ad
-        basePath: ${auth.baseUrl}${server.servlet.context-path}
-        encryptAssertions: false
-        entityId: spn:bf226903-9d44-4e77-af84-e3ad008442ef
-        keys:
-          active:
-            name: sp-signing-key-1
-        nameIds: urn:oasis:names:tc:SAML:1.1:nameid-format:emailAddress
-        providers:
-          -   alias: ps-ad
-              authenticationRequestBinding: urn:oasis:names:tc:SAML:2.0:bindings:HTTP-POST
-              metadata: https://login.microsoftonline.com/d52c9ea1-7c21-47b1-82a3-33a74b1f74b8/federationmetadata/2007-06/federationmetadata.xml?appid=bf226903-9d44-4e77-af84-e3ad008442ef
-              skipSslValidation: true
-        signMetadata: false
-        signRequests: false
-        singleLogoutEnabled: true
-        wantAssertionsSigned: true
-
-
-
-verifyUser:
-  #Purpose of properties : property used for user token expiration before verification
-  #possible values : number [1-20]
-  #used in/for : user verification functionality - In days
-  tokenExpiryDays: 30
+      relyingparty:
+        registration:
+          azure:
+            acs:
+              location: '{baseUrl}/saml/SSO'
+            assertingparty:
+              metadata-uri: https://login.microsoftonline.com/d52c9ea1-7c21-47b1-82a3-33a74b1f74b8/federationmetadata/2007-06/federationmetadata.xml?appid=bf226903-9d44-4e77-af84-e3ad008442ef
+            entity-id: "spn:bf226903-9d44-4e77-af84-e3ad008442ef"
+            singlelogout:
+              binding: POST
+              responseUrl: '{baseUrl}/saml/SingleLogout'
+              url: '{baseUrl}/saml/logout'
