--- a/central-auth-service/docker-compose.yaml
+++ b/central-auth-service/docker-compose.yaml
@@ -1,24 +1,24 @@
 version: "2"
 services:
-  # authdb:
-  #   image: psknowhow/authdb:<TAG VERSION>
-  #   tty: true
-  #   container_name: authdb
-  #   restart: always
-  #   cpus: 0.2
-  #   mem_limit: 2048m
-  #   mem_reservation: 1024m
-  #   volumes:
-  #     - authdata:/var/lib/postgresql/data
-  #     - /etc/localtime:/etc/localtime:ro
-  #   environment:
-  #    # add environment variables as mentioned here https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#AuthnAuth-Specific-Variables%3A-Use-Only-When-Deploying-Knowhow-with-Auth-Application
-  #   networks:
-  #     - Network_auth
+  authdb:
+    image: psknowhow/authdb:<TAG VERSION>
+    tty: true
+    container_name: authdb
+    restart: always
+    cpus: 0.2
+    mem_limit: 2048m
+    mem_reservation: 1024m
+    volumes:
+      - authdata:/var/lib/postgresql/data
+      - /etc/localtime:/etc/localtime:ro
+    environment:
+      - HOST=<Host IP>
+      - POSTGRES_USER=<DB USER NAME>
+      - POSTGRES_PASSWORD=<DB PASSWORD>
+      - POSTGRES_DB=<DB NAME >
+    networks:
+      - Network_auth
 
-
-  ###   If you are not running postgres as scp processor you can uncomment the above "authdb" docker service.  
-  
   authnauth:
     image: psknowhow/authnauth:<TAG VERSION>
     depends_on:
@@ -30,7 +30,17 @@ services:
     mem_limit: 2048m
     mem_reservation: 1024m
     environment:
-      # add environment variables as mentioned here https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#AuthnAuth-Specific-Variables%3A-Use-Only-When-Deploying-Knowhow-with-Auth-Application
+      - auth.baseUrl=https://<DNS>
+      - auth.baseUiUrl=https://<DNS>
+      - auth.secret=<Your Auth Secret>
+      - forgotPassword.uiHost=https://<DNS>
+      - auth.corsFilterValidOrigin=https://<DNS>
+      - spring.datasource.password=<DB PASSWORD>
+      - spring.datasource.username=<POSTGRES_USER>
+      - auth.holdingEntityId=
+      - auth.assertingEntityId=
+      - auth.alias=
+      - auth.samlLoginUrl=
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     links:
@@ -52,7 +62,8 @@ services:
     ports:
       - 443:443
     environment:
-      # add environment variables as mentioned here https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#AuthnAuth-Specific-Variables%3A-Use-Only-When-Deploying-Knowhow-with-Auth-Application
+      - REACT_APP_DNS=https://<DNS>
+      - REACT_APP_PSKnowHOW=https://<KNOWHOW DNS>
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     links:
@@ -68,4 +79,4 @@ networks:
     driver: bridge
     ipam:
       config:
-        - subnet: <Unique Pvt CIDR example 192.167.1.0/24>
+        - subnet: 192.167.1.0/24
