--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,5 @@
 version: "2"
 services:
-#remove MongoDB container, if you are using managed database
   MongoDB:
     image: psknowhow/mongo-base:5.0.18
     tty: true
@@ -12,13 +11,16 @@ services:
       - mongodbvol:/data/db
       - mongodbvol:/data/logs
     environment:
-                             #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - MONGO_INITDB_ROOT_USERNAME=<DB ROOT USERNAME>
+      - MONGO_INITDB_ROOT_PASSWORD=<DB ROOT PASSWORD>
+      - MONGODB_APPLICATION_USER=<DB APPLICATION USERNAME>
+      - MONGODB_APPLICATION_PASS=<DB APPLICATION PASSWORD>
     networks:
       - Network_apps
-#This is a mandatrory container
+
   CustomAPI:
     image: psknowhow/customapi:latest
-    depends_on: #remove this tag, if you are using managed database
+    depends_on:
       - MongoDB
     restart: on-failure
     tty: true
@@ -34,12 +36,23 @@ services:
       - customapivol:/app/certs/
       - /etc/hosts:/etc/hosts
     environment:
-    #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
-    links: #remove this tag, if you are using managed database
+      - CONFIG_LOCATION=file:/app/properties/customapi.properties
+      - forgotPassword.uiHost=<Your-Public-IP>or<Your-DNS>
+      - corsFilterValidOrigin=<Your-Public-IP>,localhost,<Your-DNS>
+      - versionnumber=7.0.0
+      - JAVA_OPTS-XX:+HeapDumpOnOutOfMemoryError
+      - spring.data.mongodb.uri=mongodb://<DB USER NAME>:<DB PASSWORD>@mongodb:27017/kpidashboard
+      # If your DB is hosted on atlas pass the Connection string in spring.data.mongodb.atlas.uri and mongodb.connection.atlas to "true"
+      - spring.data.mongodb.atlas.uri=mongodb+srv://<USER NAME>:<TOKEN>@<CLUSTER URL>.mongodb.net/kpidashboard
+      # mongodb.connection.atlas Toggle to determine whether to use local MongoDB or MongoDB Atlas
+      - mongodb.connection.atlas=false
+      - aesEncryptionKey=<Your AES Encryption KEY here>
+      - auth.secret=<Your Auth Secret>
+    links:
       - MongoDB:mongodb
     networks:
       - Network_apps
-#Mandatory container
+
   UI:
     image: psknowhow/ui:latest
     depends_on:
@@ -50,21 +63,23 @@ services:
     mem_limit: 1024m
     mem_reservation: 256m
     ports:
-      - 82:80  # If you are not installing Auth service make this port 80:80
-      - 445:443  # If you are not installing Auth service make this port 443:443
+      - 80:80
+      - 443:443
     volumes:
       - uivol:/var/log/nginx
       #- uivol:/etc/ssl/certs/ # If you have your SSL certificate uncomment it and copy to /app/apps/certs directory 
     links:
       - CustomAPI:customapi
     environment:
-      #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - API_HOST=customapi
+      - API_PORT=8080
+      - DNS_SSL=<Your-IP>
     networks:
       - Network_apps
-#remove this container, if deployment is not going to use Jira as PM tools datasource
+
   jira-processor:
     image: psknowhow/jira-processor:latest
-    depends_on: #remove this tag, if you are using managed database
+    depends_on:
       - MongoDB
     restart: on-failure
     tty: true
@@ -77,16 +92,21 @@ services:
       - jira-processorvol:/app/offline_data
       - /etc/hosts:/etc/hosts
     environment:
-      #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - JAVA_OPTS=-XX:+HeapDumpOnOutOfMemoryError
+      - spring.data.mongodb.uri=mongodb://<DB USER NAME>:<DB PASSWORD>@mongodb:27017/kpidashboard
+      # If your DB is hosted on atlas pass the Connection string in spring.data.mongodb.atlas.uri and mongodb.connection.atlas to "true"
+      - spring.data.mongodb.atlas.uri=mongodb+srv://<USER NAME>:<TOKEN>@<CLUSTER URL>.mongodb.net/kpidashboard
+      # mongodb.connection.atlas Toggle to determine whether to use local MongoDB or MongoDB Atlas
+      - mongodb.connection.atlas=false
+      - aesEncryptionKey=<Your AES Encryption KEY here>
     links:
-      - MongoDB:mongodb #remove this tag, if you are using managed database
+      - MongoDB:mongodb
     networks:
       - Network_apps
-#Remove this container, if build or repo or Sonar is not going to be used as data source
-#for details, refer the documents
+
   devops-processor:
     image: psknowhow/devops-processor:latest
-    depends_on: #remove this tag, if you are using managed database
+    depends_on:
       - MongoDB
     restart: on-failure
     tty: true
@@ -100,16 +120,22 @@ services:
       - devops-processorvol:/app/certs/
       - /etc/hosts:/etc/hosts
     environment:
-      #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
-    links: #remove this tag, if you are using managed database
+      - JAVA_OPTS=-XX:+HeapDumpOnOutOfMemoryError
+      - spring.data.mongodb.uri=mongodb://<DB USER NAME>:<DB PASSWORD>@mongodb:27017/kpidashboard
+      # If your DB is hosted on atlas pass the Connection string in spring.data.mongodb.atlas.uri and mongodb.connection.atlas to "true"
+      - spring.data.mongodb.atlas.uri=mongodb+srv://<USER NAME>:<TOKEN>@<CLUSTER URL>.mongodb.net/kpidashboard
+      # mongodb.connection.atlas Toggle to determine whether to use local MongoDB or MongoDB Atlas
+      - mongodb.connection.atlas=false
+      - aesEncryptionKey=<Your AES Encryption KEY here>
+    links:
       - MongoDB:mongodb
     networks:
       - Network_apps
-#remove this container, if Azure boards is not going to be used as data source
+
   azure-board-processor:
     image: psknowhow/azure-board-processor:latest
     restart: on-failure
-    depends_on: #remove this tag, if you are using managed database
+    depends_on:
       - MongoDB
     tty: true
     container_name: azure-board-processor
@@ -121,16 +147,22 @@ services:
       - azure-board-processorvol:/app/offline_data
       - /etc/hosts:/etc/hosts
     environment:
-     #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - JAVA_OPTS=-XX:+HeapDumpOnOutOfMemoryError
+      - spring.data.mongodb.uri=mongodb://<DB USER NAME>:<DB PASSWORD>@mongodb:27017/kpidashboard
+      # If your DB is hosted on atlas pass the Connection string in spring.data.mongodb.atlas.uri and mongodb.connection.atlas to "true"
+      - spring.data.mongodb.atlas.uri=mongodb+srv://<USER NAME>:<TOKEN>@<CLUSTER URL>.mongodb.net/kpidashboard
+      # mongodb.connection.atlas Toggle to determine whether to use local MongoDB or MongoDB Atlas
+      - mongodb.connection.atlas=false
+      - aesEncryptionKey=<Your AES Encryption KEY here>
     links:
-      - MongoDB:mongodb #remove this tag, if you are using managed database
+      - MongoDB:mongodb
     networks:
       - Network_apps
-#remove this container, if Azure boards is not going to be used as data source
+
   azure-pipeline-repo:
     image: psknowhow/azure-pipeline-repo:latest
     restart: on-failure
-    depends_on: #remove this tag, if you are using managed database
+    depends_on:
       - MongoDB
     tty: true
     container_name: azure-pipeline-repo
@@ -143,12 +175,18 @@ services:
       - azure-pipeline-repovol:/app/certs/
       - /etc/hosts:/etc/hosts
     environment:
-     #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - JAVA_OPTS=-XX:+HeapDumpOnOutOfMemoryError
+      - spring.data.mongodb.uri=mongodb://<DB USER NAME>:<DB PASSWORD>@mongodb:27017/kpidashboard
+      # If your DB is hosted on atlas pass the Connection string in spring.data.mongodb.atlas.uri and mongodb.connection.atlas to "true"
+      - spring.data.mongodb.atlas.uri=mongodb+srv://<USER NAME>:<TOKEN>@<CLUSTER URL>.mongodb.net/kpidashboard
+      # mongodb.connection.atlas Toggle to determine whether to use local MongoDB or MongoDB Atlas
+      - mongodb.connection.atlas=false
+      - aesEncryptionKey=<Your AES Encryption KEY here>
     links:
-      - MongoDB:mongodb #remove this tag, if you are using managed database
+      - MongoDB:mongodb
     networks:
       - Network_apps
-#using Kafka is optional, remove kafka-consumers, kafka container and zookeeper, if kafka is is not going to be used for notifications
+
   kafka-consumers:
     image: psknowhow/kafka-consumers:latest
     restart: on-failure
@@ -176,14 +214,14 @@ services:
     mem_limit: 2048m
     mem_reservation: 1024m
     environment:
-        #add env variable as mentioned @ https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
     ports:
       - 9092:9092
     links:
       - MongoDB:mongodb
     networks:
       - Network_apps
-
   zookeeper:
     image: zookeeper:3.8.0
     container_name: zookeeper
@@ -194,60 +232,6 @@ services:
       - "2181:2181"
     networks:
       - Network_apps
-
-  scm-processor-postgres:
-    container_name: scm-processor-postgres
-    image: postgres:11.1
-    environment:
-      # add env variable as mentioned https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#SCM-tool%3A
-    volumes:
-      - scm-processor-postgres-data:/var/lib/postgresql/data
-    restart: always
-    ports:
-      - '8001:5432'
-    networks:
-      - Network_apps
-
-  scm-processor-rabbitmq:
-    container_name: scm-processor-rabbitmq
-    image: rabbitmq:3.8-management
-    environment:
-      # add env variable as mentioned https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#SCM-tool%3A
-    ports:
-      - "8002:5672"
-      - "8003:15672"
-    cpus: 0.1
-    networks:
-      - Network_apps
-
-  scm-processor-api:
-    container_name: scm-processor-api
-    image: psknowhow/scm-processor-api:latest
-    ports:
-      - '8000:8000'
-    environment:
-      # add env variable as mentioned https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#SCM-tool%3A
-    depends_on:
-      - scm-processor-postgres
-      - scm-processor-rabbitmq
-    restart: always
-    networks:
-      - Network_apps
-
-  scm-processor-core:
-    container_name: scm-processor-core
-    image: psknowhow/scm-processor-core:latest
-    restart: always
-    environment:
-      # add env variable as mentioned https://psknowhow.atlassian.net/wiki/spaces/PSKNOWHOW/pages/45711363/Docker+Environmental+variables#SCM-tool%3A
-    volumes:
-      - scm-processor-scanner-storage:/scm-processor-storage
-    depends_on:
-      - scm-processor-postgres
-      - scm-processor-rabbitmq
-    networks:
-      - Network_apps
-      
 volumes:
   kafka-consumersrvol:
   azure-board-processorvol:
@@ -257,8 +241,6 @@ volumes:
   uivol:
   customapivol:
   mongodbvol:
-  scm-processor-scanner-storage:
-  scm-processor-postgres-data:
 
 networks:
   Network_apps:
