--- a/Kubernetes-prod/Kubernetes-manifest/devops.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/devops.yaml
@@ -102,7 +102,17 @@ spec:
         - containerPort: 50019
         - containerPort: 50020
         - containerPort: 50022
-
+        - containerPort: 50023
+        readinessProbe:
+          tcpSocket:
+            port: 50022
+          initialDelaySeconds: 40   # Wait for 140 seconds before starting probes
+          periodSeconds: 30          # Check every 30 seconds
+        livenessProbe:
+          tcpSocket:
+            port: 50022
+          initialDelaySeconds: 40
+          periodSeconds: 30
         volumeMounts:
             - name: knowhow-secrets-store
               mountPath: "/mnt/prod-secrets-store"
@@ -170,3 +180,7 @@ spec:
       port: 50022
       targetPort: 50022
       name: githubaction
+    - protocol: TCP
+      port: 50023
+      targetPort: 50023
+      name: argocd
