--- a/Kubernetes-prod/Kubernetes-manifest/jira.yaml
+++ b/Kubernetes-prod/Kubernetes-manifest/jira.yaml
@@ -84,16 +84,16 @@ spec:
         #   requests:
         #     memory: "1Gi"
         #     cpu: "0.5"
-        # readinessProbe:
-        #   tcpSocket:
-        #     port: 50008
-        #   initialDelaySeconds: 10   # Wait for 10 seconds before starting probes
-        #   periodSeconds: 5          # Check every 5 seconds
-        # livenessProbe:
-        #   tcpSocket:
-        #     port: 50008
-        #   initialDelaySeconds: 15
-        #   periodSeconds: 20
+        readinessProbe:
+          tcpSocket:
+            port: 50008
+          initialDelaySeconds: 10   # Wait for 10 seconds before starting probes
+          periodSeconds: 5          # Check every 5 seconds
+        livenessProbe:
+          tcpSocket:
+            port: 50008
+          initialDelaySeconds: 15
+          periodSeconds: 20
 
         volumeMounts:
             - name: knowhow-secrets-store
