--- a/kafka-consumers/notification-consumer/Dockerfile
+++ b/kafka-consumers/notification-consumer/Dockerfile
@@ -2,7 +2,7 @@
 FROM amazoncorretto:17
 
 # Create a non-root user
-ARG USER=knowhowuser
+ARG USER=marriott
 ARG UID=1000
 ARG GID=1000
 
@@ -36,9 +36,12 @@ EXPOSE 50020
 
 # Set permissions for the JAR file
 RUN chown -R $USER:$USER $APP_DIR
+RUN chgrp -R 0 /app && \
+    chmod -R g=u /app && \
+    chmod -R u+x /app
 
 # Switch to the non-root user
-USER $USER:$GID
+USER $USER
 
 # Entrypoint command
 ENTRYPOINT ["sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar notification-consumer.jar --spring.config.location=classpath:/BOOT-INF/classes/application.properties --spring.config.additional-location=optional:file:/app/properties/notification-consumer.properties"]
