DTS-34986-AuthNAuth-upgrade Clean up

--- a/central-auth-service/authapi/src/main/resources/application-local.yml
+++ b/central-auth-service/authapi/src/main/resources/application-local.yml
@@ -35,6 +35,10 @@ notification:
   #used in/for : sent mail
   switch: false
 
+logging:
+  level:
+    root: INFO
+
 spring:
   datasource:
     password: postgres
