--- a/central-auth-service/authapi/pom.xml
+++ b/central-auth-service/authapi/pom.xml
@@ -58,12 +58,6 @@
 	</properties>
 	<dependencies>
 		<dependency>
-			<groupId>com.publicissapient.kpidashboard</groupId>
-			<artifactId>authcommon</artifactId>
-			<version>${project.version}</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.security/spring-security-web -->
-		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-web</artifactId>
 			<version>6.2.0</version>
@@ -358,6 +352,17 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-configuration-processor</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<version>2.13.1</version> <!-- Use the version that matches your Jackson version -->
+		</dependency>
+
+		<dependency>
+			<groupId>javax.xml.bind</groupId>
+			<artifactId>jaxb-api</artifactId>
+			<version>2.3.1</version>
 		</dependency>
 	</dependencies>
 	<build>
