removed rnr url

--- a/customapi/src/main/resources/application.properties
+++ b/customapi/src/main/resources/application.properties
@@ -404,7 +404,7 @@ repoToolTriggerScan=/metric/%s/trigger-scan
 repoToolUpdateConnectionUrl=/metric/update-provider-account-password/
 
 #Recommendation api properties
-rnrRecommendationUrl=https://rr.tools.publicis.sapient.com/api/health-dashboard/recommendations?projectId.equals=%s&kpiIdList.in=%s
+rnrRecommendationUrl=
 rnrRecommendationApiKey=
 
 # Togglz properties
