DTS-36083:Scrum AI processor code jira-v2

--- a/processors/jira-v2/src/main/resources/application.properties
+++ b/processors/jira-v2/src/main/resources/application.properties
@@ -44,6 +44,10 @@ jira.scrumJqlCron=0 0 2 * * ?
 jira.kanbanBoardCron=0 0 3 * * ?
 # Every day 1 hr after kanbanBoardCron
 jira.kanbanJqlCron=0 0 4 * * ?
+# Every day
+jira.scrumAIBoardCron=0 30 18 * * ?
+# Every day
+jira.scrumAIJqlCron=0 30 17 * * ?
 # flag to consider jira.startDate configuration
 jira.considerStartDate=false
 #******* release name : KnowHOW v7.1.0 start **************
@@ -87,6 +91,10 @@ jira.jiraEpicApi=rest/agile/1.0/board/{boardId}/epic?startAt={startAtIndex}
 jira.jiraVersionApi=rest/api/2/project/{projectKey}/versions
 jira.jiraCloudVersionApi=rest/api/3/project/{projectKey}/versions
 
+# jira api to get release related workItem details
+jira.jiraVersionRelatedWork=/rest/api/2/version/{id}/relatedwork
+jira.jiraCloudVersionRelatedWork=/rest/api/3/version/{id}/relatedwork
+
 # count of sprint report to fetch in board configuration
 jira.sprintReportCountToBeFetched=15
 
@@ -99,8 +107,8 @@ kafka.mailtopic=mail-topic
 #Kafka related Properties - End
 
 #Notification properties -Start
-jira.notificationSubject.errorInJiraProcessor=Error occured in Jira Processor
-notification.switch=true
+jira.notificationSubject.errorInJiraProcessor=Error occured in Jira Processor V2
+notification.switch=false
 jira.domainNames=
 #Notification properties -End
 
@@ -114,7 +122,7 @@ samlTokenEndString=/>
 samlUrlStartString=<form method="post" action="
 samlUrlEndString=>
 
-jira.prevMonthCountToFetchData=12
+jira.prevMonthCountToFetchData=3
 jira.daysToReduce=1
 jira.chunkSize=50
 
