DTS-34986-AuthNAuth-upgrade-final Small refactor on endpoints after checking the documentation

--- a/central-auth-service/authapi/src/main/resources/application.yml
+++ b/central-auth-service/authapi/src/main/resources/application.yml
@@ -76,6 +76,12 @@ auth:
       - '/saml-login'
       - '/saml-logout'
       - '/login'
+      - '/register-user'
+      - '/forgot-password'
+      - '/reset-password'
+      - '/change-password'
+      - '/verifyUser'
+      - '/validateEmailToken'
 
   mailWithoutKafka: false
 
